--- a/week2/css/main.css
+++ b/week2/css/main.css
@@ -7,6 +7,7 @@
   --teal: hsla(187, 77%, 24%, 1);
   --yellow: hsla(40, 100%, 65%, 1);
   --lightblue: hsla(186, 77%, 37%, 0.5);
+  --white: white;
 }
 
 html {
@@ -28,13 +29,16 @@ h1 {
 
 h2,
 h3,
-h4,
-h5,
-h6 {
+h4 {
   font-family: "Shadows Into Light Two", cursive;
   color: var(--yellow);
 }
-
+h5,
+h6 {
+  font-family: "Montserrat",
+  Arial, sans-serif;
+  color: var(--yellow);
+}
 /* .notepad {
   visibility: hidden;
   position: fixed;
@@ -80,14 +84,14 @@ footer {
   text-align: center;
 }
 
-a {
+a:not(.notes a) {
   text-decoration: none;
   color: var(--teal);
   padding: 0.5rem;
   border: 1px solid var(--teal);
 }
 
-a:hover {
+a:not(.notes a):hover {
   background-color: var(--teal);
   color: var(--lightpink);
 }
@@ -100,7 +104,10 @@ li {
   font-weight: bolder;
   font-size: larger;
 }
-
+.activitylinks {
+  list-style: none;
+ line-height: 2rem;
+}
 /* -----------form--------- */
 textarea {
   width: 800px;
@@ -113,55 +120,42 @@ input {
   border: 3px solid var(--darkpink);
 }
 
+/* -------calculator page-------- */
+
 .calcBody {
-  background-color: var(--lightblue);
+  background-color: var(--blue);
   text-align: center;
+  font-size:large;
 }
 
 .calculator {
-  display: flex;
-  flex-direction: row;
   margin: 0 auto;
-  padding: 5rem;
-}
-
-.mathInputs {
-  padding: 2rem;
-}
-
-.calculator>section {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
 }
 
 .calculator button{
   margin: .5rem;
   font-size: x-large;
 }
+
 #output {
-  background-color: white;
+  background-color: var(--white);
   padding: .5rem;
-  margin: 0 40%;
+  max-height: 3rem;
+  width: 8rem;
+  justify-self: center;
   border: 3px solid var(--teal);
 }
-
+.calcBody .summary {
+  background-color: var(--white);
+  margin: 2rem;
+  border: 3px dashed var(--lightblue);
+}
 /* ----------large screen------- */
 @media only screen and (min-width: 600px) {
   body {
     max-width: 85%;
     margin: 0 auto;
   }
-
-  /* .notepad {
-    visibility: visible;
-    background-image: url("data:image/svg+xml,");
-  }
-  svg {
-    position: fixed;
-    max-width: 85%;
-    margin: 0 auto;
-  } */
   .gridbox {
     display: flex;
     flex-direction: column;
@@ -194,5 +188,39 @@ input {
   footer {
     position: absolute;
     left: 40%;
+  }
+  .calcbox {
+    display: flex;
+    flex-direction: row;
+  }
+  .calculator {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    border-left: 2px solid var(--red);
+    padding-left: .8rem;
+  }
+
+  .calculator>h2 {
+    grid-column: 1/3;
+  }
+
+  .mathInputs {
+    grid-column: 1/2;
+    grid-row: 2;
+  }
+
+  .calculator>section {
+    grid-column: 2/3;
+    grid-row: 2/4;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+  }
+
+
+  #output {
+    grid-column: 1/2;
+    grid-row: 3;
+    justify-self: center;
   }
 }
