--- a/week4/css/main.css
+++ b/week4/css/main.css
@@ -115,8 +115,8 @@ aside {
 }
 /* -----------form--------- */
 textarea {
-  width: 800px;
-  height: 250px;
+  width: 150px;
+  height: 40px;
   background-color: lightyellow;
 }
 
@@ -239,5 +239,10 @@ pre {
     grid-column: 1/2;
     grid-row: 3;
     justify-self: center;
+  }
+  .formControls {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 0rem 3rem;
   }
 }
