--- a/week4/css/tictactoe.css
+++ b/week4/css/tictactoe.css
@@ -1,30 +1,23 @@
-h1 {
-  text-align: center;
-}
-section {
-  display: flex;
-  flex-direction: row;
-  margin: 3rem 10%;
-  align-items: center;
-}
 
-.tictactoebox {
+.gamebox {
+  text-align: center;
+}section {
+    display: flex;
+    flex-direction: row;
+}.tictactoebox {
   display: grid;
   grid-template-columns: repeat(3, auto);
   max-width: 530px;
   margin: 0 auto;
 }
-
 .middle {
   border-left: 5px solid black;
   border-right: 5px solid black;
 }
-
 .center {
-  border-top: 5px solid black;
-  border-bottom: 5px solid black;
+   border-top: 5px solid black;
+   border-bottom: 5px solid black;
 }
-
 .box {
   width: 175px;
   height: 175px;
@@ -32,11 +25,17 @@ section {
   font-family: "Permanent Marker";
   font-size: 5rem;
 }
-
+select, label {
+  padding: .5rem;
+  font-size: 1.5rem;
+}
 button {
   display: block;
   padding: .5rem;
   margin: .5rem auto;
   background-color: aliceblue;
   font-size: 2rem;
+}
+.playerSelections {
+  margin: 1rem;
 }
