--- a/week5/teamactivity/css/hike.css
+++ b/week5/teamactivity/css/hike.css
@@ -13,11 +13,10 @@ body {
   background-color: var(--main);
 }
 main {
-  max-width: 800px;
+  max-width: 38rem;
   margin: 0 auto;
 }
 h1 {
-  
   color: aliceblue;
   padding: 3rem;
 }
@@ -28,14 +27,21 @@ ul {
 }
 li {
     padding: 1rem;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
 }
+h2 {
+  grid-column: 1/3; 
+}
+li.img {
+grid-column: 1/2;
+}
+
 ul li:nth-child(even){
   background-color: var(--accent);
 }
 .light div:nth-child(3n){
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
+  padding-left: 3rem;
   text-align: left;
 }
 
