--- a/disneylinebuddy/css/main.scss
+++ b/disneylinebuddy/css/main.scss
@@ -105,7 +105,7 @@ nav img {
   top: 0%;
   left: 70%;
   overflow: hidden;
-  z-index: 2;
+  z-index: 100;
 }
 
 .balloonFly {
@@ -117,8 +117,13 @@ nav img {
 }
 
 .hide {
-  z-index: -1;
+  z-index: -100;
   opacity: none;
+}
+
+.show {
+  z-index: 1;
+  opacity: 1;
 }
 
 main {
@@ -157,7 +162,7 @@ main {
   60% {
     height: 26%;
     top: -20%;
-    left: 50%;
+    left: 50%
   }
 
   80% {
@@ -213,6 +218,40 @@ main {
 }
 
 // ***********Header*********
-// header {
-//   background-color: $key;
-// }
+header {
+  background-color: $key;
+
+}
+
+.WelcomePage {
+  position: absolute;
+  top: -200%;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  //WILL have to add an animation, or a timer function for this page to show up when balloon floats up. Affect this by leaving the z-index at 1, but change the top to be 0%, from the 200%; 
+  //might want to have header slide in from the top on animation, then have the screen "vanish appear"
+  z-index: -1;
+  background-color: $light;
+  background-image: url('/disneylinebuddy/images/mickey-sketch.svg');
+  background-repeat: norepeat;
+  background-position-x: 5%;
+
+  h1 {
+    font-family: WaltographRegular, script, serif;
+    font-size: 4rem;
+  }
+
+  .navBox {
+    height: 50px;
+    width: 50px;
+  }
+
+  header {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    padding: 2rem;
+    // box-shadow: 0px 0px 20px $main;
+  }
+}
