--- a/disneylinebuddy/css/main.css
+++ b/disneylinebuddy/css/main.css
@@ -22,13 +22,17 @@
   font-family: "Open Sans", sans-serif;
 }
 
+html {
+  width: 100vw;
+}
+
 body {
   position: relative;
   overflow: hidden;
 }
 
 .enterPage {
-  width: 100%;
+  width: 100vw;
   height: 100vh;
   overflow: hidden;
   background-color: var(--yellow);
@@ -192,9 +196,9 @@ header {
   height: 100%;
   z-index: -1;
   background-color: var(--almond);
-  background-image: url("/disneylinebuddy/images/mickey-sketch.svg");
-  background-repeat: norepeat;
-  background-position-x: 5%;
+}
+.WelcomePage img {
+  width: 100%;
 }
 .WelcomePage h1,
 .WelcomePage span {
@@ -210,6 +214,48 @@ header {
   flex-direction: row;
   justify-content: space-around;
   padding: 2rem;
+}
+
+.wrongData {
+  animation: wiggle 1s linear;
+  transform: translate3d(0, 0, 0);
+  backface-visibility: hidden;
+  perspective: 1000px;
+}
+
+@keyframes wiggle {
+  10%, 90% {
+    transform: translate3d(-1px, 0, 0);
+  }
+  20%, 80% {
+    transform: translate3d(2px, 0, 0);
+  }
+  30%, 50%, 70% {
+    transform: translate3d(-4px, 0, 0);
+  }
+  40%, 60% {
+    transform: translate3d(4px, 0, 0);
+  }
+}
+@media only screen and (min-width: 500px) {
+  html {
+    max-width: 500px;
+    margin: 0 auto;
+  }
+
+  body {
+    border: 3px solid black;
+    border-radius: 50px;
+  }
+
+  .enterPage {
+    border-radius: 50px;
+  }
+
+  header,
+.WelcomePage {
+    border-radius: 50px 50px 0 0;
+  }
 }
 
 /*# sourceMappingURL=main.css.map */
