--- a/disneylinebuddy/css/main.css
+++ b/disneylinebuddy/css/main.css
@@ -86,7 +86,7 @@ body {
 
 nav img {
   position: absolute;
-  height: 15%;
+  height: 20%;
   top: 0%;
   left: 70%;
   overflow: hidden;
@@ -109,10 +109,6 @@ nav img {
 .show {
   z-index: 1;
   opacity: 1;
-}
-
-main {
-  background-color: var(--yellow);
 }
 
 @keyframes balloonFly {
@@ -152,7 +148,7 @@ main {
     left: 60%;
   }
   100% {
-    height: 15%;
+    height: 20%;
     top: 0%;
     left: 70%;
     z-index: 100;
@@ -184,10 +180,6 @@ main {
     opacity: 0;
   }
 }
-header {
-  background-color: var(--light-blue);
-}
-
 .WelcomePage {
   position: absolute;
   top: -200%;
@@ -213,7 +205,6 @@ header {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  padding: 2rem;
 }
 
 .wrongData {
@@ -249,6 +240,7 @@ header {
   }
 
   .enterPage {
+    width: 100%;
     border-radius: 50px;
   }
 
@@ -256,6 +248,39 @@ header {
 .WelcomePage {
     border-radius: 50px 50px 0 0;
   }
+}
+header {
+  display: flex;
+  flex-direction: row;
+  flex: 1 100%;
+  background-color: var(--light-blue);
+  padding: 2rem;
+}
+header h1 {
+  padding-top: 2rem;
+}
+
+main {
+  background-color: var(--yellow);
+}
+
+.mainPage {
+  background-color: var(--almond);
+  height: 100vh;
+}
+.mainPage .NavTile {
+  width: 5rem;
+  height: 5rem;
+  background-color: var(--yellow);
+  z-index: 10;
+}
+.mainPage img {
+  position: absolute;
+  top: 20%;
+  left: -15%;
+  max-width: 100%;
+  opacity: 0.5;
+  z-index: 0;
 }
 
 /*# sourceMappingURL=main.css.map */
