--- a/disneylinebuddy/css/main.scss
+++ b/disneylinebuddy/css/main.scss
@@ -107,7 +107,7 @@ body {
 // ************ Nav Balloon*********
 nav img {
   position: absolute;
-  height: 15%;
+  height: 20%;
   top: 0%;
   left: 70%;
   overflow: hidden;
@@ -132,10 +132,7 @@ nav img {
   opacity: 1;
 }
 
-main {
-  background-color: $accent;
 
-}
 
 // *******ANIMATIONS**************
 @keyframes balloonFly {
@@ -184,7 +181,7 @@ main {
   }
 
   100% {
-    height: 15%;
+    height: 20%;
     top: 0%;
     left: 70%;
     z-index: 100;
@@ -223,12 +220,7 @@ main {
   }
 }
 
-// ***********Header*********
-header {
-  background-color: $key;
-
-}
-
+// ***********Welcome Page Balloons*********
 .WelcomePage {
   position: absolute;
   top: -200%;
@@ -262,11 +254,12 @@ header {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    padding: 2rem;
     // box-shadow: 0px 0px 20px $main;
   }
 }
 
+
+// *********Data Validation*******
 .wrongData {
   animation: wiggle 1s linear;
   transform: translate3d(0, 0, 0);
@@ -298,6 +291,9 @@ header {
   }
 }
 
+
+
+// ****************Media Query*********************
 @media only screen and (min-width: 500px) {
   html {
     max-width: 500px;
@@ -310,6 +306,7 @@ header {
   }
 
   .enterPage {
+    width: 100%;
     border-radius: 50px;
   }
 
@@ -317,4 +314,45 @@ header {
   .WelcomePage {
     border-radius: 50px 50px 0 0;
   }
+}
+
+// ***********Header*********
+header {
+  display: flex;
+  flex-direction: row;
+  flex: 1 100%;
+  background-color: $key;
+  padding: 2rem;
+
+  h1 {
+    padding-top: 2rem;
+  }
+}
+
+// **********Main Page**********
+main {
+  background-color: $accent;
+}
+
+.mainPage {
+  background-color: $light;
+  height: 100vh;
+
+  .NavTile {
+    width: 5rem;
+    height: 5rem;
+    background-color: $accent;
+    z-index: 10;
+  }
+
+  img {
+    position: absolute;
+    top: 20%;
+    left: -15%;
+    max-width: 100%;
+    opacity: .5;
+    z-index: 0;
+  }
+
+
 }
