--- a/disneylinebuddy/css/style.css
+++ b/disneylinebuddy/css/style.css
@@ -57,5 +57,13 @@ main {
   height: 10rem;
   background-color: var(--yellow);
 }
+.mainPage .navBalloon {
+  position: absolute;
+  width: 50%;
+  top: 0 px;
+  left: 60%;
+  z-index: 2;
+  border: 3px solid red;
+}
 
 /*# sourceMappingURL=style.css.map */
