--- a/disneylinebuddy/css/mainpage.css
+++ b/disneylinebuddy/css/mainpage.css
@@ -119,9 +119,10 @@ header {
   opacity: 30%;
   top: -50px;
   left: -50px;
- height: 100%;
+  height: 100%;
 
 }
+
 .bottomImage {
   top: 100vh;
 }
@@ -133,7 +134,6 @@ header {
   top: 0;
   width: 100vw;
   height: 100vh;
-  background-color: var(--blue);
 }
 
 /* ************ Character Search Page********* */
@@ -141,8 +141,12 @@ header {
   min-height: 100vh;
   max-width: 100%;
   padding: 1rem;
-   object-fit: cover;
+  object-fit: cover;
   overflow: hidden;
+}
+
+.characterPage .colorWrapper {
+  background-color: var(--blue);
 }
 
 .characterPage form {
@@ -160,10 +164,12 @@ input[type="text"] {
   padding: 1rem;
   min-width: 80%;
 }
+
 label {
   font-size: 1.5rem;
   color: var(--white);
 }
+
 .button {
   background-color: var(--red);
   color: var(--white);
@@ -180,25 +186,82 @@ label {
   border-color: -internal-light-dark(rgb(118, 118, 118), rgb(133, 133, 133));
   border-image: initial;
 }
+
 .returnresults {
   background-color: var(--light-blue);
   padding: .5rem;
   display: none;
 }
+
 .show {
   display: block;
 }
+.hide {
+  display: none;
+}
+
 .returnresults h2 {
- text-align: center;
- font-size: 3rem;
+  text-align: center;
+  font-size: 3rem;
 }
+
 .returnresults img {
- display: block;
- margin: 1rem auto;
+  display: block;
+  margin: 1rem auto;
 }
+
 .returnresults li li {
   margin-left: 2rem;
 }
+
 .returnresults ul {
   margin-bottom: 1rem;
+}
+
+/* ************ Trivia Page********* */
+
+.triviaPage .colorWrapper {
+  background-color: var(--white);
+}
+
+.triviaCard {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  align-content: center;
+  margin: 3rem auto;
+}
+
+.largeTile {
+  width: 300px;
+  height: 300px;
+  border-radius: 15px;
+  padding: 10px;
+  border: 6px solid var(--border);
+  -webkit-background-clip: padding-box;
+  background-clip: padding-box;
+  
+}
+.triviaCardFront {
+  background-color: var(--blue);
+  color: var(--white);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+.triviaCardBack {
+  background-color: var(--yellow);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+.show {
+  display: flex;
+}
+
+.hide {
+  display: none;
 }
