--- a/disneylinebuddy/css/main.css
+++ b/disneylinebuddy/css/main.css
@@ -89,7 +89,7 @@ nav img {
   height: 20%;
   top: 0%;
   left: 70%;
-  overflow: hidden; 
+  overflow: hidden;
   z-index: 100;
 }
 
@@ -282,5 +282,9 @@ main {
   opacity: 0.5;
   z-index: 0;
 }
-
+/* .enterPageWrapper {
+   position: relative;
+   overflow: hidden;
+   height: 100vh;
+} */
 /*# sourceMappingURL=main.css.map */
