--- a/disneylinebuddy/css/mainpage.css
+++ b/disneylinebuddy/css/mainpage.css
@@ -471,10 +471,10 @@ label {
     /* relative so it can move in the container */
     position: relative;
     /* positioned the amount of the container, minus the heieght of the character */
-    top: 140px;
+    top: 330px;
     right: 290px;
     z-index: 100;
-    height: 500px;
+    height: 200px;
   }
 
   .getPoints {
@@ -490,7 +490,7 @@ border: 1px solid yellow;
  height: 80px;
  position: absolute;
  top: 230px;
- left: 130px;
+ left: 10px;
 }
 .gameOver {
   border: 1px solid red;
@@ -512,7 +512,7 @@ border: 1px solid yellow;
     position: relative;
      height: 80px;
     top: -110px;
-    /* left: 250px; */
+    left: 250px;
     border: 1px solid red;
   }
 
@@ -524,6 +524,8 @@ border: 1px solid yellow;
   }
 
   .buttonBox {
+    display: flex;
+   justify-content: flex-end;
     text-align: center;
   }
 
@@ -548,21 +550,136 @@ border: 1px solid yellow;
 
   @keyframes jump {
     0% {
-      top: 200px;
+      top: 330px;
     }
 
     30% {
-      top: 100px;
+      top: 130px;
     }
 
     70% {
-      top: 100px;
+      top: 130px;
     }
 
     100% {
-      top: 200px;
+      top: 330px;
     }
   }
+
+/* ***************** Would you Rather? Page ********* */
+.flipCardContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  padding-top: 3rem;
+}
+.ratherPage {
+  position: relative;
+  overflow: hidden;
+  min-height: 100vh;
+}
+.ratherPage .backgroundimg {
+position: absolute;
+z-index: -1;
+opacity: 80%;
+/* top: -50 px; */
+/* left: -50 px; */
+min-height: 100 vh;
+}
+.ratherPage .colorWrapper {
+  /* background-color: var(--yellow); */
+  height: 100%;
+}
+.ratherBtn {
+  width: 100px;
+  height: 100px;
+  color: var(--white);
+  background-color: var(--orange);
+  border-radius: 5px;
+  font-size: 4rem;
+  text-align: center;
+  float: right;
+  margin: 4rem 2rem;
+
+  cursor: pointer;
+}
+.ratherBtn:hover {
+  background-color:hsla(40, 79%, 54%, 1);
+}
+.ratherBtn:focus {
+  width: 95px;
+  height: 95px;
+  background-color:hsla(40, 79%, 54%, 1);
+}
+.ratherBtn:active {
+  width: 95px;
+  height: 95px;
+  background-color: hsla(40, 79%, 54%, 1);
+}
+
+.rathercardWrapper {
+  margin-top: 3rem;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.rather-card {
+  background-color: transparent;
+  width: 400px;
+  height: 250px;
+  perspective: 1000px;
+  /* border-radius: 15px;
+  padding: 10px;
+  border: 6px solid var(--border);
+  -webkit-background-clip: padding-box;
+  background-clip: padding-box; */
+}
+
+.rather-card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 1.8s;
+  transform-style: preserve-3d;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  cursor: pointer;
+}
+
+.rather-card-front,
+.rather-card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  /* border-radius: 15px; */
+}
+
+.rather-card-front {
+  background-color: var(--blue);
+}
+
+.rather-card-back {
+  content: "Would you rather...";
+  background-color: var(--orange);
+  /* transform: rotateX(180deg); */
+}
+
+/* .ratherfliptoBack {
+  transform: rotateX(180deg);
+}
+
+.ratherfliptoFront {
+  transform: rotateX(0deg);
+} */
 
 
 /* **************** Media Query************ */
